@@ -1,3 +1,9 @@
+2008-09-03  Michael Snyder  <msnyder@vmware.com>
+
+	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepping 
+	over, into, and out of a function call. 
+	* gdb.twreverse/step-reverse.c: Ditto.
+
 2008-09-01  Michael Snyder  <msnyder@vmware.com>
 
 	* gdb.twreverse/step-reverse.exp: New file.
